<?xml version="1.0"?>
<package>
  <name>aras_teleop</name>
  <version>0.2.6</version>
  <description>A text-based interface to send a robot movement commands</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Benyamin Jafari</maintainer>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals, Benyamin Jafari</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
