<?xml version="1.0"?>
<package>
  <name>visual_servo_image</name>
  <version>0.2.6</version>
  <description>visual_servo_image</description>

  <maintainer email="bence.magyar.robotics@gmail.com">benyamin jafari</maintainer>
  <author email="siegfried.gevatter@pal-robotics.com">benyamin jafari</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>
